--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,8 @@
 {
   "workspace": [
     "./packages/hello-world",
-    "./applications/cli/hello"
+    "./packages/prompts",
+    "./applications/cli/hello",
+    "./applications/cli/prompts-cli"
   ]
 }
